--- a/config.yaml
+++ b/config.yaml
@@ -3,33 +3,25 @@
 
 host: ''
 port: 8317
-
 tls:
   enable: false
   cert: ''
   key: ''
-
 remote-management:
   allow-remote: false
-  secret-key: tuyenqwe
+  secret-key: $2a$10$84bkMU/adR1mtxT0KtVvfuWRuRi/t3k2ZTD4EN1KTVP4AX9LPKl5i
   disable-control-panel: false
-
 auth-dir: ~/.cli-proxy-api
-
 api-keys:
   - tuyen
   - tuyenqwe
-
 debug: false
 logging-to-file: false
 usage-statistics-enabled: false
-
 proxy-url: ''
 request-retry: 3
 max-retry-interval: 30
-
 quota-exceeded:
   switch-project: true
   switch-preview-model: true
-
 ws-auth: false
