--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ auth-dir: ~/.cli-proxy-api
 api-keys:
   - tuyen
   - tuyenqwe
-debug: false
+debug: true
 logging-to-file: false
 usage-statistics-enabled: false
 proxy-url: ''
